# speckit-copilot

./: .gitignore
.github/: copilot-instructions.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 20260518_0001_create_tasks_table.py  20260520_0002_add_task_cursor_index.py
backend/src/: main.py
backend/src/api/: schemas.py
backend/src/api/routes/: comments.py  tasks.py
backend/src/lib/: comment_service.py  task_domain.py  task_service.py
backend/src/models/: comment.py  task.py
backend/src/repositories/: comment_repository.py  db.py  task_repository.py
backend/tests/: conftest.py
backend/tests/contract/: test_task_delete.py  test_task_replace.py  test_task_status_patch.py  test_tasks_list_create.py
backend/tests/integration/: test_task_delete_flow.py  test_task_edit_flow.py  test_task_list_create_flow.py  test_task_status_flow.py
backend/tests/unit/: test_cursor_pagination.py  test_task_domain.py
frontend/: package-lock.json  package.json  tailwind.config.ts  test_output.txt  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  styles.css
frontend/src/components/: TaskList.tsx  (+3 more)
specs/001-taskflow-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+30 files in other folders)
