[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-backend"
version = "0.1.0"
description = "TaskFlow backend service"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "sqlmodel==0.0.24",
  "sqlalchemy==2.0.43",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
